<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/backMMButton"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TableRow
            android:gravity="center"
            android:layout_marginBottom="55dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:text="@string/SinglePlayerTextView" />

        </TableRow>

        <TableRow
            android:gravity="center"
            android:layout_marginBottom="15dp">

            <EditText
                android:id="@+id/Player1NameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:text="@string/Player1Name" />
        </TableRow>

        <TableRow
            android:gravity="center"
            android:layout_marginBottom="15dp">

            <EditText
                android:id="@+id/Player2NameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:text="@string/Player2Name" />
        </TableRow>

        <TableRow
            android:gravity="center"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/startGameSinglePlayerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startGameSinglePlayer"
                android:background="@drawable/button_shape"/>
        </TableRow>

    </TableLayout>

</LinearLayout>