<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/backSMButton"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">


        <TableRow
            android:gravity="center"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:text="@string/SinglePlayerModeText" />

        </TableRow>

        <TableRow
            android:gravity="center"
            android:layout_marginBottom="15dp">

<!--            <Button-->
<!--                android:id="@+id/buttonEasy"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginBottom="20dp"-->
<!--                android:layout_marginRight="20dp"-->
<!--                android:layout_marginLeft="20dp"-->
<!--                android:text="@string/EasyModeButton"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                android:background="@drawable/button_shape"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

            <Button
                android:id="@+id/buttonEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EasyModeButton"
                android:background="@drawable/button_shape"/>
        </TableRow>

        <TableRow
            android:gravity="center"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/buttonImposible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ImpossibleModeButton"
                android:background="@drawable/button_shape"/>

<!--            <Button-->
<!--                android:id="@+id/buttonImposible"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/ImpossibleModeButton"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                android:layout_marginRight="20dp"-->
<!--                android:layout_marginLeft="20dp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                android:background="@drawable/button_shape"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/buttonEasy" />-->
        </TableRow>

    </TableLayout>

</LinearLayout>